maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: Boolean does not take parameters
  else  (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
                                                                          ^